immoly/immoly-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "2"
  labels:
    app: immoly-app
  name: immoly-app
  namespace: immoly
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: immoly-app
      app: immoly-app
  template:
    metadata:
      labels:
        io.kompose.service: immoly-app
        app: immoly-app
    spec:
      containers:
        - image: ghcr.io/davidcode2/immoly:1.0.4
          name: immoly-app
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
          ports:
            - containerPort: 3000
      restartPolicy: Always
