immoly/immoly-postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.37.0 (HEAD)
    argocd.argoproj.io/sync-wave: "0"
  labels:
    io.kompose.service: immoly-postgres
  name: immoly-postgres
  namespace: immoly
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: immoly-postgres
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.37.0 (HEAD)
      labels:
        io.kompose.service: immoly-postgres
    spec:
      containers:
        - image: postgres:16.0-alpine
          name: immoly-postgres
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: immoly-volume
          livenessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - postgres
                - -d
                - postgres
            failureThreshold: 5
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 5
      restartPolicy: Always
      volumes:
        - name: immoly-volume
          persistentVolumeClaim:
            claimName: immoly-volume
