immoly/immoly-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immoly-postgres-service
  namespace: immoly
  labels:
    io.kompose.service: immoly-postgres-service
spec:
  type: ClusterIP
  ports:
  - port: 5432
    targetPort: 5432
    protocol: TCP
  selector:
    io.kompose.service: immoly-postgres
